--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Repositório do curso Cypress Playground da Escola Talking About Testing.",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "cypress open"
   },
   "keywords": [
     "Cypress Playground",
@@ -11,5 +11,17 @@
     "Talking About Testing"
   ],
   "author": "Walmyr <wlsf82@gmail.com> (https://walmyr.dev/)",
-  "license": "MIT"
+  "license": "MIT",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wlsf82/curso-cypress-playground.git"
+  },
+  "bugs": {
+    "url": "https://github.com/wlsf82/curso-cypress-playground/issues"
+  },
+  "homepage": "https://github.com/wlsf82/curso-cypress-playground#readme",
+  "devDependencies": {
+    "cypress": "^13.13.3"
+  }
 }
