--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "description": "Repositório do curso Cypress Playground da Escola Talking About Testing.",
   "scripts": {
-    "test": "cypress open"
+    "cy:open": "cypress open",
+    "cy:open:mobile": "cypress open --config viewportWidth=410,viewportHeight=860",
+    "test": "cypress run",
+    "test:mobile": "cypress run --config viewportWidth=410,viewportHeight=860",
+    "test:cloud": "cypress run --record"
   },
   "keywords": [
     "Cypress Playground",
